@@ -1,3 +1,12 @@
+Before 0.97a
+------------
+BUG - Editor clone doesn't work
+FIXED BUG - Show Only First Doesn't Work
+FIXED BUG - Editor imagemap has wrong sort order (lower things have priority)
+
+
+
+
 Before 0.97
 -----------
 DONE No filenames for weathermap_data
